k8s/yaml/deployConfigSecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  namespace: example-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: example-app
      containers:
      - name: example-container
        image: busybox:latest
        command: [ "sleep", "3600" ]
        volumeMounts:
        - mountPath: "/data"
          name: efs-volume
        - mountPath: "/config"
          name: config-volume
      volumes:
      - name: efs-volume
        persistentVolumeClaim:
          claimName: example-pvc
      - name: config-volume
        configMap:
          name: example-configmap
          items:
          - key: config-file.properties
            path: config-file.properties
